[CSS Color 4] CSS color() function should not clamp channels to the 0-1 range https://bugs.webkit.org/show_bug.cgi?id=234697

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Update tests to include out of gamut examples for RGB types as well as some outside
allowed values for lab/lch/oklab/oklch types (in the latter we clamp as the spec requires.).

* web-platform-tests/css/css-color/color-function-parsing-expected.txt:
* web-platform-tests/css/css-color/color-function-parsing.html:
* web-platform-tests/css/css-color/parsing/color-computed-expected.txt:
* web-platform-tests/css/css-color/parsing/color-computed.html:
* web-platform-tests/css/css-color/parsing/color-mix-computed-expected.txt:
* web-platform-tests/css/css-color/parsing/color-mix-computed.html:
* web-platform-tests/css/css-color/parsing/color-mix-valid-expected.txt:
* web-platform-tests/css/css-color/parsing/color-mix-valid.html:
* web-platform-tests/css/css-color/parsing/color-valid-expected.txt:
* web-platform-tests/css/css-color/parsing/color-valid.html:
* web-platform-tests/css/css-color/parsing/relative-color-computed-expected.txt:
* web-platform-tests/css/css-color/parsing/relative-color-computed.html:
* web-platform-tests/css/css-color/parsing/relative-color-valid-expected.txt:
* web-platform-tests/css/css-color/parsing/relative-color-valid.html:

Source/WebCore:

Allow components outside the the 0-1 range for RGB color function types (e.g. color(srgb -2 15 100)).

* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::parseColorFunctionForRGBTypes):
Remove clamping when parsing RGB color function types (we still clamp for legacy rgb()/rgba() as specified).

(WebCore::CSSPropertyParserHelpers::parseRelativeColorFunctionParameters):
(WebCore::CSSPropertyParserHelpers::parseNonRelativeColorFunctionParameters):
Switch mapping of RGB color function types to their extended counterparts which allow the extended range.

* platform/graphics/ColorInterpolationMethod.h:
Switch the RGB interpolation color types to the extended counterparts as well to allow out of gamut mixing.

LayoutTests:

Update tests to include out of gamut examples for RGB types as well as some outside
allowed values for lab/lch/oklab/oklch types (in the latter we clamp as the spec requires.).

* css3/color/color-function-computed-style-expected.txt:
* css3/color/color-function-computed-style.html:
* css3/color/color-function-parsing-expected.txt:
* css3/color/color-function-parsing.html:
* fast/css/parsing-color-function-expected.txt:
* fast/css/parsing-color-function.html:



Canonical link: https://commits.webkit.org/245890@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287838 268f45cc-cd09-0410-ab3c-d52691b4dbfc